welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();
while(!estSurBiscuit)
{
	avance();
}

while(!estFaceMur)
{
	prendBiscuit();
	gauche();
	gauche();

	while(!estSurBiscuit)
	{
		avance();
	}
	recule();
	deposeBiscuit();
	
	droite();
	droite();
	while(!estSurBiscuit && estFaceMur)
	{
		avance();
	}
}

droite();
avance();
gauche();
avance();

